Based my work on the first C# sample
I've laid the ground work for translating the first C# sample into C++ that cliff has given to us but Ill write a little list of things I've done

-added cliffs samples to the repo (Tank-CS-CPP)
-Based my work on CSharp_Tank_01

for my project
-Added Class Files
   -Game_01
   -Helper
   -Program
   -SceneObjects
   -SpriteObjects

Added my math stucts to the project I think some of them need to be fixed as well

and with the video I'm up to tank demo 1 roughly around 1:31:xx

--- a/Tank-CS-CPP/CPP_Tank_starter/RaylibStarterCpp/RaylibStarterCPP/RaylibStarterCPP.vcxproj
+++ b/Tank-CS-CPP/CPP_Tank_starter/RaylibStarterCpp/RaylibStarterCPP/RaylibStarterCPP.vcxproj
@@ -175,21 +175,14 @@
     <ClCompile Include="Game_01.cpp" />
     <ClCompile Include="Helper.cpp" />
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="Program.cpp" />
-    <ClCompile Include="SceneObjects.cpp" />
-    <ClCompile Include="SpriteObjects.cpp" />
+    <ClCompile Include="SceneObject.cpp" />
+    <ClCompile Include="SpriteObject.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Game_01.h" />
     <ClInclude Include="Helper.h" />
-    <ClInclude Include="MathHeaders\Colour.h" />
-    <ClInclude Include="MathHeaders\Matrix3.h" />
-    <ClInclude Include="MathHeaders\Matrix4.h" />
-    <ClInclude Include="MathHeaders\Vector3.h" />
-    <ClInclude Include="MathHeaders\Vector4.h" />
-    <ClInclude Include="Program.h" />
-    <ClInclude Include="SceneObjects.h" />
-    <ClInclude Include="SpriteObjects.h" />
+    <ClInclude Include="SceneObject.h" />
+    <ClInclude Include="SpriteObject.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
