fixed stupid lib thing

--- a/RaylibStarterCpp/RaylibStarterCPP.vcxproj
+++ b/RaylibStarterCpp/RaylibStarterCPP.vcxproj
@@ -173,16 +173,21 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Game_01.cpp" />
-    <ClCompile Include="Helper.cpp" />
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="SceneObject.cpp" />
-    <ClCompile Include="SpriteObject.cpp" />
+    <ClCompile Include="Program.cpp" />
+    <ClCompile Include="SceneObjects.cpp" />
+    <ClCompile Include="SpriteObjects.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Game_01.h" />
-    <ClInclude Include="Helper.h" />
-    <ClInclude Include="SceneObject.h" />
-    <ClInclude Include="SpriteObject.h" />
+    <ClInclude Include="MathHeaders\Colour.h" />
+    <ClInclude Include="MathHeaders\Matrix3.h" />
+    <ClInclude Include="MathHeaders\Matrix4.h" />
+    <ClInclude Include="MathHeaders\Vector3.h" />
+    <ClInclude Include="MathHeaders\Vector4.h" />
+    <ClInclude Include="Program.h" />
+    <ClInclude Include="SceneObjects.h" />
+    <ClInclude Include="SpriteObjects.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
